--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Ivory Key Productions</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.png">
+    <script src="components/header.js" type="text/javascript" defer></script>
+    <script src="components/footer.js" type="text/javascript" defer></script>
 </head>
 <body>
-    <div class="p-1 text-center">
+    <header-component></header-component>
+    <!--<div class="p-1 text-center">
         <h1>Ivory Key Productions</h1>
         <h4>Audio and Vidoe Home Studio Services</h4>
-    </div>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    </div>-->
+    <!--<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -24,39 +27,15 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact Us</a>
-                </li>
-                <li class="nav-item">
+                </li>-->
+                <!--<li class="nav-item">
                     <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-            </ul>
+                </li>-->
+            <!--</ul>
         </div>
-    </nav>
-    <div class="container mt-5">
+    </nav>-->
+    <div class="container mt-3">
         <div class="row">
-            <div class="col-sm-4">
-                <h2>About Me</h2>
-                <img src="images/Studio_Old.JPG" class="img-thumbnail" alt="Cinque Terre" width="100" height="100">
-                <div class="fakeimg">Fake Image</div>
-                <p>Somerset, NJ, United States</p>
-                <p>Producer, Musician, Songwriter, Beat Maker, Recording Engineer Ivory Key Productions</p>
-                <h3 class="mt-4">Music References</h3>
-                <p>DAW Software, Musical Instruments and Tutorials</p>
-                <ul class="nav nav-pills flex-column">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="https://www.ableton.com/">Ableton Live</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.avid.com/pro-tools">Avid Technology</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.reasonstudios.com/">Reason Studios</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.masterclass.com/articles/home-recording-studio-101-how-to-record-instruments">Master Class</a>
-                    </li>
-                </ul>
-                <hr class="d-sm-none">
-            </div>
             <div class="col-sm-8">
                 <h2>We're almost finished</h2>
                 <h5>Junw 19, 2009</h5>
@@ -125,11 +104,92 @@
                     room was creating before.
                 </p>
             </div>
+            <div class="col-sm-4">
+                <h2>About Me</h2>
+                <img src="images/Studio_Old.JPG" class="img-thumbnail" alt="Cinque Terre" width="100" height="100">
+                <div class="fakeimg">At the very begining</div>
+                <p>Somerset, NJ, United States</p>
+                <p>Producer, Musician, Songwriter, Beat Maker, Recording Engineer Ivory Key Productions</p>
+                <h3 class="mt-4">Music References</h3>
+                <p>DAW Software, Musical Instruments and Tutorials</p>
+                <ul class="nav nav-pills flex-column">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="https://www.ableton.com/">Ableton Live</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.avid.com/pro-tools">Avid Technology</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.reasonstudios.com/">Reason Studios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.masterclass.com/articles/home-recording-studio-101-how-to-record-instruments">Master Class</a>
+                    </li>
+                </ul>
+                <!--<hr class="d-sm-none">-->
+                <h3 class="mt-4">My Songs Sample</h3>
+                <ul class="nav nav-pills flex-column">
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://soundcloud.com/tlennon/oh-well2/s-CxaM1?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">Oh Well</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link"
+                           href="https://soundcloud.com/tlennon/g-ride2/s-aZzVr?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
+                            G-Ride (Feat. Christina R.)
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://soundcloud.com/tlennon/my-fantasy-boy/s-BIekf?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
+                            My Fantasy Boy (Feat. Janira R.)
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://soundcloud.com/tlennon/what-im-looking-for/s-31f78?in=tlennon/sets/young-amazin/s-Dc6R3&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
+                            What I'm Looking For (Feat. Young Amazin)
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://soundcloud.com/tlennon/no-more-dutch/s-cBGw6?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
+                            No More Dutch (Feat. Young Amazin)
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://soundcloud.com/tlennon/you-so-fine/s-TmtCi?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
+                            Me Just F*#king Around
+                        </a>
+                    </li>
+                </ul>
+                <!--<hr class="d-sm-none">-->
+                <h3 class="mt-4">My Video Tutorials</h3>
+                <ul class="nav nav-pills flex-column">
+                    <li class="nav-item">
+                        <a class="nav-link" href="abelton_routing.html">
+                            Abelton to NI Kore Live Routing
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="kontakt_automation.html">
+                            NI Kontakt Automation
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="kontakt_routing.html">
+                            NI Kontakt Routing
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="kore_routing.html">
+                            NI Kore to Protools Routing
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
-    <div class="mt-5 p-4 bg-dark text-white text-center">
-        <p>Footer</p>
-    </div>
+    <footer-component></footer-component>
+    <!--<div class="mt-5 p-4 bg-dark text-white text-center">-->
+    <!--<p>Footer</p>-->
+    <!--</div>-->
 
 </body>
 </html>
