--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
     <div class="container mt-3">
         <div class="row">
             <div class="col-sm-8">
-                <h2>We're almost finished</h2>
-                <h5>Junw 19, 2009</h5>
+                <h2>Where it all started</h2>
+                <h5>2009</h5>
                 <img src="images/Studio_Close.JPG" class="img-thumbnail" alt="Cinque Terre" width="204" height="136">
-                <p>Not much yet!</p>
+                <p>There is not much yet!</p>
                 <p>
-                    It all started 3 years ago. It dawned on me that I had always wanted to get back into the music
-                    and recording industry and the timing was perfect as I had fewer financial responsibilities.
+                    It dawned on me that I had always wanted to get back into the music
+                    and the recording industry and the timing was perfect as I had fewer financial responsibilities.
                     I finally got up enough nerve and money to purchase my first synthesizer workstation.
                     I waited until I got a check from the government in the form of a tax return and headed out to Sam Ash
                     music store and bought a <a href="https://www.yamaha-keyboard-guide.com/yamaha-motif-es8.html">Yamaha Motif ES8</a>,
@@ -62,7 +62,7 @@
                     audio workstation <a href="https://en.wikipedia.org/wiki/Digital_audio_workstation">(DAW)</a> instead. I did a lot of research and comparison shopping and chose
                     <a href="https://www.avid.com/pro-tools">Digidesign Pro Tools LE</a> (now Avid),
                     <a href="https://www.reasonstudios.com/en/reason">Propellerhead Reason</a>, and
-                    <a href="https://www.ableton.com/en/live/">Ableton Live</a>. I selected
+                    <a href="https://www.ableton.com/en/live/">Ableton Live</a>. I also selected
                     <a href="https://www.native-instruments.com/en/">Native Instrument</a>
                     Kore (no longer avaiable), Kontakt, and Komplete as my main VSTIs because they comes
                     with an abundance of soft instruments and samplers.
@@ -71,11 +71,11 @@
                     Each year I would plan on a new purchase using my tax return as the primary source of the capital
                     investment. So as the years passed, I purchased a
                     <a href="https://mackie.com/en/products/controllers/mcu-pro-and-xt-pro">Mackie Universal Control</a>
-                    (MCU Pro) and 2 extenders (XT Pro), a couple more flat screens, 3 desk, condenser microphones, a pair of
-                    <a href="https://www.dynaudio.com/professional-audio/classic-bm-range/bm15a/">Dynaudio B15a</a>, monitor stands.
+                    (MCU Pro) and 2 extenders (XT Pro), a couple more flat screens, 3 desks, condenser microphones, a pair of
+                    <a href="https://www.dynaudio.com/professional-audio/classic-bm-range/bm15a/">Dynaudio B15a</a>, and monitor stands.
                 </p>
                 <p>
-                    Now, this year, I finally decided it was time for room acoustic treatment. So I did a lot more
+                    I finally decided it was time for room acoustic treatment. So I did a lot more
                     research and comparison and selected <a href="https://www.gikacoustics.com/">GIK acoustic panels</a>.
                 </p>
                 <p>
@@ -84,8 +84,9 @@
                     some great hardware equipment, we hope to be a competitive force in the project studio recording business.
                 </p>
                 <h2 class="mt-5">It's Complete</h2>
-                <h5>September 2, 2015</h5>
+                <h5>2012</h5>
                 <img src="images/Studio_Wide.JPG" class="img-thumbnail" alt="Cinque Terre" width="204" height="136">
+                <p></p>
                 <p>
                     I finally put up the acoustic room treatment and what a difference. The sound is fantastic.
                     I have never heard my music sound so good. The frequency response is flat at the low, mid and high
