--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Ivory Key Productions</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <script src="components/header.js" type="text/javascript" defer></script>
     <script src="components/footer.js" type="text/javascript" defer></script>
 </head>
@@ -38,7 +38,7 @@
         <div class="row">
             <div class="col-sm-8">
                 <h2>Where it all started</h2>
-                <h5>2009</h5>
+                <h5>2012</h5>
                 <img src="images/Studio_Close.JPG" class="img-thumbnail" alt="Cinque Terre" width="204" height="136">
                 <p>There is not much yet!</p>
                 <p>
@@ -84,7 +84,7 @@
                     some great hardware equipment, we hope to be a competitive force in the project studio recording business.
                 </p>
                 <h2 class="mt-5">It's Complete</h2>
-                <h5>2012</h5>
+                <h5>2016</h5>
                 <img src="images/Studio_Wide.JPG" class="img-thumbnail" alt="Cinque Terre" width="204" height="136">
                 <p></p>
                 <p>
