--- a/studio.html
+++ b/studio.html
@@ -1,11 +1,106 @@
 ﻿<!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <title>Ivory Key Productions</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <script src="components/header.js" type="text/javascript" defer></script>
+    <script src="components/footer.js" type="text/javascript" defer></script>
+    <style>
+        img {
+            border: 1px solid #ddd; /* Gray border */
+            border-radius: 4px; /* Rounded border */
+            padding: 10px; /* Some padding */
+            width: 200px; /* Set a small width */
+        }
+
+            img:hover {
+                box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+            }
+
+        .grow {
+            transition: all .2s ease-in-out;
+        }
+
+            .grow:hover {
+                transform: scale(1.1);
+            }
+    </style>
 </head>
 <body>
-
+    <header-component></header-component>
+    <div class="container mt-5 >
+        <div class="column">
+            <a target="_blank" href="images/IMG_401415074034678.jpeg">
+                <img src="images/IMG_401415074034678.jpeg"
+                     alt="Forest" class="grow">
+            </a>
+            <a target="_blank" href="images/IMG_401428141448022.jpeg">
+                <img src="images/IMG_401428141448022.jpeg"
+                     alt="Forest" class="grow">
+            </a>
+            <a target="_blank" href="images/IMG_401435583281513.jpeg">
+                <img src="images/IMG_401435583281513.jpeg"
+                     alt="Forest" class="grow">
+            </a>
+            <a target="_blank" href="images/IMG_401454078886987.jpeg">
+                <img src="images/IMG_401454078886987.jpeg"
+                     alt="Forest" class="grow">
+            </a>
+            <a target="_blank" href="images/IMG_401462002196311.jpeg">
+                <img src="images/IMG_401462002196311.jpeg"
+                     alt="Forest" class="grow">
+            </a>
+            <a target="_blank" href="images/IMG_401469722929955.jpeg">
+                <img src="images/IMG_401469722929955.jpeg"
+                     alt="Forest" class="grow">
+            </a>
+            <a target="_blank" href="images/IMG_401477212004663.jpeg">
+                <img src="images/IMG_401477212004663.jpeg"
+                     alt="Forest" class="grow">
+            </a>
+            <a target="_blank" href="images/IMG_401484204955101.jpeg">
+                <img src="images/IMG_401484204955101.jpeg"
+                     alt="Forest" class="grow">
+            </a>
+            <a target="_blank" href="images/IMG_401491884581568.jpeg">
+                <img src="images/IMG_401491884581568.jpeg"
+                     alt="Forest" class="grow">
+            </a>
+            <a target="_blank" href="images/IMG_401500056151390.jpeg">
+                <img src="images/IMG_401500056151390.jpeg"
+                     alt="Forest" class="grow">
+            </a>
+            <a target="_blank" href="images/IMG_401508005248072.jpeg">
+                <img src="images/IMG_401508005248072.jpeg"
+                     alt="Forest" class="grow">
+            </a>
+            <a target="_blank" href="images/IMG_401535260466577.jpeg">
+                <img src="images/IMG_401535260466577.jpeg"
+                     alt="Forest" class="grow">
+            </a>
+            <a target="_blank" href="images/IMG_401543257170678.jpeg">
+                <img src="images/IMG_401543257170678.jpeg"
+                     alt="Forest" class="grow">
+            </a>
+            <a target="_blank" href="images/IMG_401550320342067.jpeg">
+                <img src="images/IMG_401550320342067.jpeg"
+                     alt="Forest" class="grow">
+            </a>
+            <a target="_blank" href="images/IMG_401529608122827.jpeg">
+                <img src="images/IMG_401529608122827.jpeg"
+                     alt="Forest" class="grow">
+            </a>
+            <a target="_blank" href="images/IMG_401521836241723.jpeg">
+                <img src="images/IMG_401550320342067.jpeg"
+                     alt="Forest" class="grow">
+            </a>
+        </div>
+    </div>
+    <footer-component></footer-component>
 </body>
+
 </html>
