Made changes and added files

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                 </p>
             </div>
         </div>
-        <p>A professional computer programmer, musician, songwriter, and producer.</p>
+        <p> <em>A professional recording engineer, musician, songwriter, and producer of electronic, hip hop, pop, R&B music. Unlimited tracks and every instrument on the planet. Contact us to make your next demo or begin your next musical project.</em></p>
     </div>
 </body>
 </html>﻿
