--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <img src="images/Studio_Old.JPG" class="img-thumbnail" alt="Cinque Terre" width="100" height="100">
                 <div class="fakeimg">At the very begining</div>
                 <p>Somerset, NJ, United States</p>
-                <p>Producer, Musician, Songwriter, Beat Maker, Recording Engineer Ivory Key Productions</p>
+                <p>Producer, Musician, Songwriter, Beat Maker, and Recording Engineer</p>
                 <h3 class="mt-4">Music References</h3>
                 <p>DAW Software, Musical Instruments and Tutorials</p>
                 <ul class="nav nav-pills flex-column">
