Added img old to studio pics

--- a/studio.html
+++ b/studio.html
@@ -34,6 +34,10 @@
     <header-component></header-component>
     <div class="container mt-5 >
         <div class="column">
+            <a target="_blank" href="images/Studio_Old.JPG">
+                <img src="images/Studio_Old.JPG"
+                     alt="Forest" class="grow">
+            </a>
             <a target="_blank" href="images/IMG_401415074034678.jpeg">
                 <img src="images/IMG_401415074034678.jpeg"
                      alt="Forest" class="grow">
