Changed links to open in their own tab

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
         p.mystyle {
             padding: 20px;
-            line-height: 1:1;
+            line-height: 25px;
             font-size: x-large;
             font-family: "Times New Roman", Times, serif;
         }
@@ -32,11 +32,12 @@
                     <br>
                     <strong>1234 Main Street</strong> <br>
                     Somerset, NJ 08641<br>
-                    Home: 732.633.1560
+                    Home: 732.633.1560 <br>
+                    <a href="mailto:tlennon.ikp@gmail.com" target="_blank"> IvoryKey@gmail.com</a>
                 </p>
             </div>
         </div>
-        <p> <em>A professional recording engineer, musician, songwriter, and producer of electronic, hip hop, pop, R&B music. Unlimited tracks and every instrument on the planet. Contact us to make your next demo or begin your next musical project.</em></p>
+        <span> <em>A professional recording engineer, musician, songwriter, and producer of electronic, hip hop, pop, R&B music. Unlimited tracks and every instrument on the planet. Contact us to make your next demo or begin your next musical project.</em></span>
     </div>
 </body>
 </html>﻿
