--- a/index.html
+++ b/index.html
@@ -12,28 +12,6 @@
 </head>
 <body>
     <header-component></header-component>
-    <!--<div class="p-1 text-center">
-        <h1>Ivory Key Productions</h1>
-        <h4>Audio and Vidoe Home Studio Services</h4>
-    </div>-->
-    <!--<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <div class="container-fluid">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Studio Photos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact Us</a>
-                </li>-->
-                <!--<li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li>-->
-            <!--</ul>
-        </div>
-    </nav>-->
     <div class="container mt-3">
         <div class="row">
             <div class="col-sm-8">
@@ -46,37 +24,41 @@
                     and the recording industry and the timing was perfect as I had fewer financial responsibilities.
                     I finally got up enough nerve and money to purchase my first synthesizer workstation.
                     I waited until I got a check from the government in the form of a tax return and headed out to Sam Ash
-                    music store and bought a <a href="https://www.yamaha-keyboard-guide.com/yamaha-motif-es8.html">Yamaha Motif ES8</a>,
-                    a dynamic microphone, and a pair of <a href="http://www.samsontech.com/samson/products/studio-monitors/resolv/resolv50a/">Sanson 50a</a>
+                    music store and bought a 
+                    <a href="https://www.yamaha-keyboard-guide.com/yamaha-motif-es8.html" target="_blank">Yamaha Motif ES8</a>,
+                    a dynamic microphone, and a pair of 
+                    <a href="http://www.samsontech.com/samson/products/studio-monitors/resolv/resolv50a/" target="_blank">Sanson 50a</a>
                     active monitors with subwoofer.
                     Enough power and capabilities to start recording some pretty decent beats.
                 </p>
                 <p>
                     The following year I purchased a more powerful computer, a
-                    <a href="https://www.roland.com/us/products/vs-2000cd/">Roland VS2000</a> 16 track audio recorder,
+                    <a href="https://www.roland.com/us/products/vs-2000cd/" target="_blank">Roland VS2000</a> 16 track audio recorder,
                     a couple of expansion cards and software, a flat screen monitor, and a
-                    <a href="https://www.roland.com/us/products/varios/">Roland VariOS</a> Open System Module
+                    <a href="https://www.roland.com/us/products/varios/" target="_blank">Roland VariOS</a> Open System Module
                 </p>
                 <p>
                     Since then, I've added more equipment but finally decided to invest in a software based digital
-                    audio workstation <a href="https://en.wikipedia.org/wiki/Digital_audio_workstation">(DAW)</a> instead. I did a lot of research and comparison shopping and chose
-                    <a href="https://www.avid.com/pro-tools">Digidesign Pro Tools LE</a> (now Avid),
-                    <a href="https://www.reasonstudios.com/en/reason">Propellerhead Reason</a>, and
-                    <a href="https://www.ableton.com/en/live/">Ableton Live</a>. I also selected
-                    <a href="https://www.native-instruments.com/en/">Native Instrument</a>
+                    audio workstation <a href="https://en.wikipedia.org/wiki/Digital_audio_workstation" target="_blank">(DAW)</a> 
+                    instead. I did a lot of research and comparison shopping and chose
+                    <a href="https://www.avid.com/pro-tools" target="_blank">Digidesign Pro Tools LE</a> (now Avid),
+                    <a href="https://www.reasonstudios.com/en/reason" target="_blank">Propellerhead Reason</a>, and
+                    <a href="https://www.ableton.com/en/live/" target="_blank">Ableton Live</a>. I also selected
+                    <a href="https://www.native-instruments.com/en/" target="_blank">Native Instrument</a>
                     Kore (no longer avaiable), Kontakt, and Komplete as my main VSTIs because they comes
                     with an abundance of soft instruments and samplers.
                 </p>
                 <p>
                     Each year I would plan on a new purchase using my tax return as the primary source of the capital
                     investment. So as the years passed, I purchased a
-                    <a href="https://mackie.com/en/products/controllers/mcu-pro-and-xt-pro">Mackie Universal Control</a>
+                    <a href="https://mackie.com/en/products/controllers/mcu-pro-and-xt-pro" target="_blank">Mackie Universal Control</a>
                     (MCU Pro) and 2 extenders (XT Pro), a couple more flat screens, 3 desks, condenser microphones, a pair of
-                    <a href="https://www.dynaudio.com/professional-audio/classic-bm-range/bm15a/">Dynaudio B15a</a>, and monitor stands.
+                    <a href="https://www.dynaudio.com/professional-audio/classic-bm-range/bm15a/" target="_blank">Dynaudio B15a</a>, 
+                    and monitor stands.
                 </p>
                 <p>
                     I finally decided it was time for room acoustic treatment. So I did a lot more
-                    research and comparison and selected <a href="https://www.gikacoustics.com/">GIK acoustic panels</a>.
+                    research and comparison and selected <a href="https://www.gikacoustics.com/" target="_blank">GIK acoustic panels</a>.
                 </p>
                 <p>
                     As a small up and coming company partnering with others, IKP is working to construct the best project
@@ -115,47 +97,53 @@
                 <p>DAW Software, Musical Instruments and Tutorials</p>
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" href="https://www.ableton.com/">Ableton Live</a>
+                        <a class="nav-link active" href="https://www.ableton.com/" target="_blank">Ableton Live</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.avid.com/pro-tools">Avid Technology</a>
+                        <a class="nav-link" href="https://www.avid.com/pro-tools" target="_blank">Avid Technology</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.reasonstudios.com/">Reason Studios</a>
+                        <a class="nav-link" href="https://www.reasonstudios.com/" target="_blank">Reason Studios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.masterclass.com/articles/home-recording-studio-101-how-to-record-instruments">Master Class</a>
+                        <a class="nav-link" 
+                           href="https://www.masterclass.com/articles/home-recording-studio-101-how-to-record-instruments" target="_blank">Master Class</a>
                     </li>
                 </ul>
                 <!--<hr class="d-sm-none">-->
                 <h3 class="mt-4">My Songs Sample</h3>
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item">
-                        <a class="nav-link" href="https://soundcloud.com/tlennon/oh-well2/s-CxaM1?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">Oh Well</a>
+                        <a class="nav-link" 
+                           href="https://soundcloud.com/tlennon/oh-well2/s-CxaM1?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">Oh Well</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"
-                           href="https://soundcloud.com/tlennon/g-ride2/s-aZzVr?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
+                           href="https://soundcloud.com/tlennon/g-ride2/s-aZzVr?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
                             G-Ride (Feat. Christina R.)
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://soundcloud.com/tlennon/my-fantasy-boy/s-BIekf?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
+                        <a class="nav-link" 
+                           href="https://soundcloud.com/tlennon/my-fantasy-boy/s-BIekf?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
                             My Fantasy Boy (Feat. Janira R.)
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://soundcloud.com/tlennon/what-im-looking-for/s-31f78?in=tlennon/sets/young-amazin/s-Dc6R3&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
+                        <a class="nav-link" 
+                           href="https://soundcloud.com/tlennon/what-im-looking-for/s-31f78?in=tlennon/sets/young-amazin/s-Dc6R3&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
                             What I'm Looking For (Feat. Young Amazin)
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://soundcloud.com/tlennon/no-more-dutch/s-cBGw6?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
+                        <a class="nav-link" 
+                           href="https://soundcloud.com/tlennon/no-more-dutch/s-cBGw6?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
                             No More Dutch (Feat. Young Amazin)
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://soundcloud.com/tlennon/you-so-fine/s-TmtCi?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
+                        <a class="nav-link" 
+                           href="https://soundcloud.com/tlennon/you-so-fine/s-TmtCi?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
                             Me Just F*#king Around
                         </a>
                     </li>
@@ -164,22 +152,22 @@
                 <h3 class="mt-4">My Video Tutorials</h3>
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item">
-                        <a class="nav-link" href="abelton_routing.html">
+                        <a class="nav-link" href="abelton_routing.html" target="_blank">
                             Abelton to NI Kore Live Routing
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="kontakt_automation.html">
+                        <a class="nav-link" href="kontakt_automation.html" target="_blank">
                             NI Kontakt Automation
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="kontakt_routing.html">
+                        <a class="nav-link" href="kontakt_routing.html" target="_blank">
                             NI Kontakt Routing
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="kore_routing.html">
+                        <a class="nav-link" href="kore_routing.html" target="_blank">
                             NI Kore to Protools Routing
                         </a>
                     </li>
