Change a links and contact pic

--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,10 @@
     <div class="container mt-3">
         <div class="row">
             <div class="col-sm-2">
-                <img src="images/MyWebPic.JPG" class="img-thumbnail" alt="Cinque Terre" 
-                     width="204" height="136">
+                <a target="_blank" href="images/MyWebPic.JPG">
+                    <img src="images/MyWebPic.JPG"
+                         alt="Forest" class="grow">
+                </a>
             </div>
             <div class="col-sm-8">
                 <p class="contact">
