--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     <header-component></header-component>
-    <div class="container mt-3">
+    <div class="container mt-2">
         <div class="row">
             <div class="col-sm-8">
                 <h2>Where it all started</h2>
-                <h5>2012</h5>
+                <p class="year">2012</p>
                 <p><img src="images/Studio_Close.JPG" class="img-thumbnail" 
                          alt="Cinque Terre" style="width:204px; height:136px; 
                             float:left;margin-right:15px;">
@@ -64,11 +64,9 @@
                     As a small up and coming company partnering with others, IKP is working to construct the best project
                     studio we could. We are finally a couple of days from completing it. With all the latest software and
                     some great hardware equipment, we hope to be a competitive force in the project studio recording business.
-                </p>
-                <h2 class="mt-5">It's Complete</h2>
-                <h5>2016</h5>
-                
-                <p><img src="images/Studio_Wide.JPG" class="img-thumbnail" alt="Cinque Terre" 
+                <h2>It's Complete</h2>
+                <p class="year">2016</p>
+                <img src="images/Studio_Wide.JPG" class="img-thumbnail" alt="Cinque Terre" 
                         style="width:204px; height:136px; 
                             float:left;margin-right:15px;">
                     <b>YEAH BABY!</b>   I finally put up the acoustic room treatment and what a difference. The sound is fantastic.
@@ -98,7 +96,7 @@
                 <p>DAW Software, Musical Instruments and Tutorials</p>
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" href="https://www.ableton.com/" target="_blank">Ableton Live</a>
+                        <a class="nav-link" href="https://www.ableton.com/" target="_blank">Ableton Live</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://www.avid.com/pro-tools" target="_blank">Avid Technology</a>
